plugins/xpath/xpath-lang/testData/xpath2/highlighting/unionOperatorNotApplicable.xpath2
<error descr="Operator 'union' cannot be applied to expressions of type 'xs:integer'">1 union 2</error>